--- a/carta/squirtle.html
+++ b/carta/squirtle.html
@@ -7,10 +7,10 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
     <style>
         .card {
@@ -56,7 +56,7 @@
             margin:0 auto;
             border: 8px solid lightgray;
             border-bottom-width:0;
-            background-image: url('pic.png');
+            background-image: url('images/mainImage.png');
             width: 400px;
             height: 253px;
         }
@@ -74,7 +74,7 @@
             font-style: italic;
             line-height: 2;
             border-radius: 175px 20px 266px 132px;
-            background-image: url("autorline.png");
+            background-image: url("images/backgroundLine.png");
         }
 
         .basic{
@@ -86,7 +86,7 @@
             font-size: 13px;
             display: inline-block;
             border-radius: 132px 20px 136px 1px;
-            background-image: url("autorline.png");
+            background-image: url("images/backgroundLine.png");
             width: 85px;
             line-height: 1.7;
             height: 19px;
@@ -139,7 +139,7 @@
 
         .author{
             border-radius: 199px 20px 266px 132px;
-            background-image: url("authorBackground.png");
+            background-image: url("images/authorBackground.png");
             line-height: 1.8;
             position: relative;
             font-style: italic;
@@ -233,7 +233,7 @@
             <div class="lefHeader">
                 <span class="lvl">hp</span>
                 <span class="hp">50</span>
-                <img class="type" src="agua.png" height="30" width="30px">
+                <img class="type" src="images/waterEnergy.png" height="30" width="30px">
             </div>
         </div>
     </div>
@@ -248,7 +248,7 @@
     <div class="row">
         <div class="atack" style="padding-top: 4px">
             <div class="col-xs-3">
-                <img class="imgAtack" src="agua.png" height="23" width="23">
+                <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
             </div>
             <div class="col-xs-9">
                 <span class="titleAtack">Bubble</span>
@@ -262,8 +262,8 @@
     <div class="row">
         <div class="atack" style="position: relative;top : -5px;">
             <div class="col-xs-3">
-                <img class="imgAtack" src="agua.png" height="23" width="23">
-                <img class="imgAtack" src="normal.png" height="23" width="23">
+                <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
+                <img class="imgAtack" src="images/normalEnergy.png" height="23" width="23">
             </div>
             <div class="col-xs-7">
                 <span class="titleAtack">Aqua Tail</span>
@@ -273,7 +273,7 @@
                 <span class="plus" >+</span>
             </div>
             <div class="col-xs-12 textAtack">
-                Flip a coin for each <img src="gota.png" width="17px" height="17px" />
+                Flip a coin for each <img src="images/waterIcon.png" width="17px" height="17px" />
                 Energy attached to Squrtle.This attack
                 does 20 damage plus 10 more damage for each heads.
             </div>
@@ -283,7 +283,7 @@
     <div class="row">
         <div class="col-xs-10">
             <div>
-                <img class="line" src="authorBackground.png"
+                <img class="line" src="images/authorBackground.png"
                      width="335px"/>
             </div>
         </div>
@@ -319,7 +319,7 @@
     <div class="row">
         <div class="col-xs-4">
             <div class="imgFooter damage">
-                <img src="raio.png" height="20" width="20">
+                <img src="images/lightEnergy.png" height="20" width="20">
                 <span class="footDamage">+10</span>
             </div>
         </div>
@@ -329,7 +329,7 @@
         </div>
         <div class="col-xs-4">
             <div class="imgFooter">
-                <img src="normal.png" height="20" width="20">
+                <img src="images/normalEnergy.png" height="20" width="20">
             </div>
         </div>
     </div>
@@ -352,14 +352,14 @@
             </div>
             </div>
             <div class="col-xs-2">
-                <img class="cornerCircle" src="some.png" height="20" width="20">
+                <img class="cornerCircle" src="images/circle.png" height="20" width="20">
             </div>
             </div>
     </div>
 
 </div>
 
-<script src="jquery.min.js"></script>
-<script src="bootstrap.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
