--- a/carta/squirtle.html
+++ b/carta/squirtle.html
@@ -4,249 +4,38 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
-
-    <!-- Latest compiled and minified CSS -->
+    <title>Squirtle</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-
-    <style>
-        .card {
-            box-shadow:inset 0 0 10px #000000;
-            background-color: deepskyblue;
-            margin: 50px;
-            height: 50px;
-            border: 15px solid gold;
-            border-radius: 15px;
-            height: 610px;
-            width: 450px;
-            font-family: "Gill Sans MT", Arial, Helvetica, sans-serif;
-        }
-
-        .titleCard {
-            font-weight: bold;
-            font-size: 2em;
-        }
-
-        .lvl {
-            font-weight: bold;
-        }
-
-        .hp {
-            font-weight: bold;
-            font-size: 2em;
-            position: relative;
-            top: 3px;
-        }
-
-        .type {
-            position: relative;
-            top: -3px;
-        }
-
-        .lefHeader {
-            text-align: right;
-        }
-
-        .imgCard{
-            box-shadow:inset 0 0 10px #000000;
-            position: relative;
-            margin:0 auto;
-            border: 8px solid lightgray;
-            border-bottom-width:0;
-            background-image: url('images/mainImage.png');
-            width: 400px;
-            height: 253px;
-        }
-
-        .footerImgCard{
-
-            position: absolute;
-            left: -11px;
-            bottom: -10px;
-            text-align: center;
-            font-size: 10px;
-            margin:0 auto;
-            width: 404px;
-            height: 18px;
-            font-style: italic;
-            line-height: 2;
-            border-radius: 175px 20px 266px 132px;
-            background-image: url("images/backgroundLine.png");
-        }
-
-        .basic{
-            position: absolute;
-            left: -14px;
-            top: -10px;
-            padding-left: 10px;
-            font-weight: bold;
-            font-size: 13px;
-            display: inline-block;
-            border-radius: 132px 20px 136px 1px;
-            background-image: url("images/backgroundLine.png");
-            width: 85px;
-            line-height: 1.7;
-            height: 19px;
-        }
-
-
-        .atack {
-            margin-top: 15px;
-        }
-
-        .titleAtack {
-            font-weight: bold;
-            font-size: 23px;
-            position: relative;
-            left: -20px;
-        }
-
-        .imgAtack{
-            position: relative;
-            top: 5px;
-        }
-
-        .textAtack{
-            position: relative;
-            top: -2px;
-            padding-right: 2px;
-            font-size: 14px;
-            padding-right: 0;
-        }
-
-        .hit{
-            position: relative;
-            bottom: -5px;
-            left: 10px;
-            font-weight: bold;
-            font-size: 20px;
-        }
-
-        .line{
-            margin-top: 15px;
-            margin-bottom: 3px;
-            border-radius: 132px 20px 266px 132px;
-            height: 5px;
-        }
-
-        .textabout{
-            margin: 0 auto;
-            border-radius: 2px;
-        }
-
-        .author{
-            border-radius: 199px 20px 266px 132px;
-            background-image: url("images/authorBackground.png");
-            line-height: 1.8;
-            position: relative;
-            font-style: italic;
-            padding-left: 5px;
-            font-size: 9px;
-            width: 210px;
-            display: inline-block;
-            height: 14px;
-            padding-right: 13px;
-            text-align: right;
-            margin-top: 5px;
-            right: 212px;
-        }
-
-        .footerFonts{
-           margin-top: 5px;
-           text-align: center;
-            font-size: 10px;
-           font-weight: bold;
-        }
-        .imgFooter{
-            text-align: center;
-            position: relative;
-            top:-8px;
-        }
-
-        .footDamage{
-            font-weight: bold;
-            position: relative;
-            top: 2px;
-        }
-
-        .damage{
-          padding-left: 25px;
-        }
-
-        .footerText{
-            position: relative;
-            top: -5px;
-            font-size: 10px;
-        }
-
-        .cornerCircle{
-            position: relative;
-            top: -13px;
-            right: -58px;
-        }
-
-        .rightText{
-            text-align: right;
-            position: relative;
-            top: -6px;
-            font-size: 11px;
-            font-weight: bold;
-            right: -38px;
-        }
-
-        .centerText {
-            position: relative;
-            left: 43px;
-            font-size: 9px;
-        }
-
-        .leftText{
-            font-weight: bold;
-            font-size: 9px;
-
-        }
-
-        .plus{
-            position: relative;
-            font-size: 16px;
-            left: 7px;
-            top: 6px;
-        }
-
-        body {
-            background-color: #ffffff;
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/card.css">
 </head>
 <body>
 <div class="container  card">
     <div class="row">
         <div class="col-xs-6">
             <span class="titleCard">Squirtle</span>
-            <span class="lvl">lvl15</span>
+            <span class="textLv">LV.</span>
+            <span class="numberLvl">15</span>
         </div>
         <div class="col-xs-6">
             <div class="lefHeader">
-                <span class="lvl">hp</span>
+                <span class="hpText">hp</span>
                 <span class="hp">50</span>
                 <img class="type" src="images/waterEnergy.png" height="30" width="30px">
             </div>
         </div>
     </div>
     <div class="row">
-            <div class="imgCard">
-                <span class="basic">BASIC</span>
-                <div class="footerImgCard">
-                    <span>NO. 007 Tinyturtle Pokemon HT: 1'08* WT: 12.8 lbs.</span>
-                </div>
+        <div class="imgCard">
+            <span class="basic">BASIC</span>
+
+            <div class="footerImgCard">
+                <span>NO. 007 Tinyturtle Pokemon HT: 1'08* WT: 12.8 lbs.</span>
             </div>
+        </div>
     </div>
     <div class="row">
-        <div class="atack" style="padding-top: 4px">
+        <div class="atack imageTextBotton">
             <div class="col-xs-3">
                 <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
             </div>
@@ -254,13 +43,12 @@
                 <span class="titleAtack">Bubble</span>
             </div>
             <div class="col-xs-12 textAtack">
-             Flip a coin. If heads, the Defending Pokemon is now Paralyzed.
+                Flip a coin. If heads, the Defending Pokemon is now Paralyzed.
             </div>
         </div>
     </div>
-
     <div class="row">
-        <div class="atack" style="position: relative;top : -5px;">
+        <div class="atack betweenTexts">
             <div class="col-xs-3">
                 <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
                 <img class="imgAtack" src="images/normalEnergy.png" height="23" width="23">
@@ -269,17 +57,16 @@
                 <span class="titleAtack">Aqua Tail</span>
             </div>
             <div class="col-xs-2">
-                <span class="hit" >20</span>
-                <span class="plus" >+</span>
+                <span class="hit">20</span>
+                <span class="plus">+</span>
             </div>
             <div class="col-xs-12 textAtack">
-                Flip a coin for each <img src="images/waterIcon.png" width="17px" height="17px" />
+                Flip a coin for each <img src="images/waterIcon.png" width="17px" height="17px"/>
                 Energy attached to Squrtle.This attack
                 does 20 damage plus 10 more damage for each heads.
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-10">
             <div>
@@ -288,34 +75,30 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-10">
-            <div class="textabout textAtack" style="font-style: italic;font-size: 12px;">
+            <div class="textabout textAtack textAboutPokemon">
                 It shelters itself in its shell, then strikes back with spouts of
                 water at every opportunity.
             </div>
         </div>
     </div>
-
     <div class="row">
-            <div class="col-xs-offset-11 col-xs-1">
-                <span class="author">Illus. Kagemaru Himeno</span>
-            </div>
+        <div class="col-xs-offset-11 col-xs-1">
+            <span class="author">Illus. Kagemaru Himeno</span>
+        </div>
     </div>
-
-    <div class="row" style="position: relative;top:-6px">
+    <div class="row energyBar">
         <div class="col-xs-4 footerFonts">
-           weakness
+            weakness
         </div>
         <div class="col-xs-4 footerFonts">
-           resistance
+            resistance
         </div>
         <div class="col-xs-4 footerFonts">
             retreat cost
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-4">
             <div class="imgFooter damage">
@@ -333,7 +116,6 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-3">
             <div class="footerText leftText">
@@ -347,18 +129,16 @@
         </div>
         <div class="col-xs-4">
             <div class="col-xs-2">
-            <div class="footerText rightText">
-                112/132&#9679;
-            </div>
+                <div class="footerText rightText">
+                    112/132&#9679;
+                </div>
             </div>
             <div class="col-xs-2">
                 <img class="cornerCircle" src="images/circle.png" height="20" width="20">
             </div>
-            </div>
+        </div>
     </div>
-
 </div>
-
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
