--- a/carta/squirtle.html
+++ b/carta/squirtle.html
@@ -10,134 +10,126 @@
     <link rel="stylesheet" href="css/card.css">
 </head>
 <body>
-<div class="container  card">
-    <div class="row">
+<div class="container card">
+    <div class="row header">
         <div class="col-xs-6">
-            <span class="titleCard">Squirtle</span>
-            <span class="textLv">LV.</span>
-            <span class="numberLvl">15</span>
+            <span class="name">Squirtle</span>
+            <span class="levelLabel">LV.</span>
+            <span class="levelValue">15</span>
         </div>
-        <div class="col-xs-6">
-            <div class="lefHeader">
-                <span class="hpText">hp</span>
-                <span class="hp">50</span>
-                <img class="type" src="images/waterEnergy.png" height="30" width="30px">
-            </div>
+        <div class="col-xs-6 leftSide">
+            <span>hp</span>
+            <span class="hpValue">50</span>
+            <img src="images/waterEnergy.png">
         </div>
     </div>
-    <div class="row">
-        <div class="imgCard">
-            <span class="basic">BASIC</span>
+    <div class="row picture">
+        <span class="cardType">BASIC</span>
 
-            <div class="footerImgCard">
-                <span>NO. 007 Tinyturtle Pokemon HT: 1'08* WT: 12.8 lbs.</span>
-            </div>
+        <div class="description">
+            <span>NO. 007 Tinyturtle Pokemon HT: 1'08* WT: 12.8 lbs.</span>
         </div>
     </div>
-    <div class="row">
-        <div class="atack imageTextBotton">
-            <div class="col-xs-3">
-                <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
-            </div>
-            <div class="col-xs-9">
-                <span class="titleAtack">Bubble</span>
-            </div>
-            <div class="col-xs-12 textAtack">
-                Flip a coin. If heads, the Defending Pokemon is now Paralyzed.
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="atack betweenTexts">
-            <div class="col-xs-3">
-                <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
-                <img class="imgAtack" src="images/normalEnergy.png" height="23" width="23">
-            </div>
-            <div class="col-xs-7">
-                <span class="titleAtack">Aqua Tail</span>
-            </div>
-            <div class="col-xs-2">
-                <span class="hit">20</span>
-                <span class="plus">+</span>
-            </div>
-            <div class="col-xs-12 textAtack">
-                Flip a coin for each <img src="images/waterIcon.png" width="17px" height="17px"/>
-                Energy attached to Squrtle.This attack
-                does 20 damage plus 10 more damage for each heads.
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-10">
-            <div>
-                <img class="line" src="images/authorBackground.png"
-                     width="335px"/>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-10">
-            <div class="textabout textAtack textAboutPokemon">
-                It shelters itself in its shell, then strikes back with spouts of
-                water at every opportunity.
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-offset-11 col-xs-1">
-            <span class="author">Illus. Kagemaru Himeno</span>
-        </div>
-    </div>
-    <div class="row energyBar">
-        <div class="col-xs-4 footerFonts">
-            weakness
-        </div>
-        <div class="col-xs-4 footerFonts">
-            resistance
-        </div>
-        <div class="col-xs-4 footerFonts">
-            retreat cost
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-4">
-            <div class="imgFooter damage">
-                <img src="images/lightEnergy.png" height="20" width="20">
-                <span class="footDamage">+10</span>
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <div class="imgFooter">
-            </div>
-        </div>
-        <div class="col-xs-4">
-            <div class="imgFooter">
-                <img src="images/normalEnergy.png" height="20" width="20">
-            </div>
-        </div>
-    </div>
-    <div class="row">
+    <div class="row firstAtack">
         <div class="col-xs-3">
-            <div class="footerText leftText">
-                DBBP#007
-            </div>
+            <img src="images/waterEnergy.png">
         </div>
-        <div class="col-xs-5">
-            <div class="footerText centerText">
-                2007 Pokemon/Nintendo
-            </div>
+        <div class="col-xs-9">
+            <span class="title">Bubble</span>
         </div>
-        <div class="col-xs-4">
-            <div class="col-xs-2">
-                <div class="footerText rightText">
-                    112/132&#9679;
-                </div>
-            </div>
-            <div class="col-xs-2">
-                <img class="cornerCircle" src="images/circle.png" height="20" width="20">
-            </div>
+        <div class="col-xs-12 atackDescription">
+            Flip a coin. If heads, the Defending Pokemon is now Paralyzed.
         </div>
     </div>
+    <div class="row secondAtack">
+        <div class="col-xs-3">
+            <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
+            <img class="imgAtack" src="images/normalEnergy.png" height="23" width="23">
+        </div>
+        <div class="col-xs-7">
+            <span class="titleAtack">Aqua Tail</span>
+        </div>
+        <div class="col-xs-2">
+            <span class="hit">20</span>
+            <span class="plus">+</span>
+        </div>
+        <div class="col-xs-12 textAtack">
+            Flip a coin for each <img class="iconType" src="images/waterIcon.png" width="17px" height="17px"/>
+            Energy attached to Squrtle.This attack
+            does 20 damage plus 10 more damage for each heads.
+        </div>
+    </div>
+    <!-- <div class="row">
+         <div class="col-xs-10">
+             <div>
+                 <img class="line" src="images/authorBackground.png"
+                      width="335px"/>
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-xs-10">
+             <div class="textabout textAtack textAboutPokemon">
+                 It shelters itself in its shell, then strikes back with spouts of
+                 water at every opportunity.
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-xs-offset-11 col-xs-1">
+             <span class="author">Illus. Kagemaru Himeno</span>
+         </div>
+     </div>
+     <div class="row energyBar">
+         <div class="col-xs-4 footerFonts">
+             weakness
+         </div>
+         <div class="col-xs-4 footerFonts">
+             resistance
+         </div>
+         <div class="col-xs-4 footerFonts">
+             retreat cost
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-xs-4">
+             <div class="imgFooter damage">
+                 <img src="images/lightEnergy.png" height="20" width="20">
+                 <span class="footDamage">+10</span>
+             </div>
+         </div>
+         <div class="col-xs-4">
+             <div class="imgFooter">
+             </div>
+         </div>
+         <div class="col-xs-4">
+             <div class="imgFooter">
+                 <img src="images/normalEnergy.png" height="20" width="20">
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-xs-3">
+             <div class="footerText leftText">
+                 DBBP#007
+             </div>
+         </div>
+         <div class="col-xs-5">
+             <div class="footerText centerText">
+                 2007 Pokemon/Nintendo
+             </div>
+         </div>
+         <div class="col-xs-4">
+             <div class="col-xs-2">
+                 <div class="footerText rightText">
+                     112/132&#9679;
+                 </div>
+             </div>
+             <div class="col-xs-2">
+                 <img class="cornerCircle" src="images/circle.png" height="20" width="20">
+             </div>
+         </div>
+     </div>-->
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
