add finish refactor to sass

--- a/carta/squirtle.html
+++ b/carta/squirtle.html
@@ -43,93 +43,80 @@
     </div>
     <div class="row secondAtack">
         <div class="col-xs-3">
-            <img class="imgAtack" src="images/waterEnergy.png" height="23" width="23">
-            <img class="imgAtack" src="images/normalEnergy.png" height="23" width="23">
+            <img src="images/waterEnergy.png">
+            <img src="images/normalEnergy.png">
         </div>
         <div class="col-xs-7">
-            <span class="titleAtack">Aqua Tail</span>
+            <span class="title">Aqua Tail</span>
         </div>
         <div class="col-xs-2">
             <span class="hit">20</span>
             <span class="plus">+</span>
         </div>
-        <div class="col-xs-12 textAtack">
-            Flip a coin for each <img class="iconType" src="images/waterIcon.png" width="17px" height="17px"/>
-            Energy attached to Squrtle.This attack
+        <div class="col-xs-12">
+            Flip a coin for each <img class="iconType" src="images/waterIcon.png"/>
+            Energy attached to Squirtle.This attack
             does 20 damage plus 10 more damage for each heads.
         </div>
     </div>
-    <!-- <div class="row">
-         <div class="col-xs-10">
-             <div>
-                 <img class="line" src="images/authorBackground.png"
-                      width="335px"/>
-             </div>
-         </div>
-     </div>
-     <div class="row">
-         <div class="col-xs-10">
-             <div class="textabout textAtack textAboutPokemon">
-                 It shelters itself in its shell, then strikes back with spouts of
-                 water at every opportunity.
-             </div>
-         </div>
-     </div>
-     <div class="row">
-         <div class="col-xs-offset-11 col-xs-1">
-             <span class="author">Illus. Kagemaru Himeno</span>
-         </div>
-     </div>
-     <div class="row energyBar">
-         <div class="col-xs-4 footerFonts">
-             weakness
-         </div>
-         <div class="col-xs-4 footerFonts">
-             resistance
-         </div>
-         <div class="col-xs-4 footerFonts">
-             retreat cost
-         </div>
-     </div>
-     <div class="row">
-         <div class="col-xs-4">
-             <div class="imgFooter damage">
-                 <img src="images/lightEnergy.png" height="20" width="20">
-                 <span class="footDamage">+10</span>
-             </div>
-         </div>
-         <div class="col-xs-4">
-             <div class="imgFooter">
-             </div>
-         </div>
-         <div class="col-xs-4">
-             <div class="imgFooter">
-                 <img src="images/normalEnergy.png" height="20" width="20">
-             </div>
-         </div>
-     </div>
-     <div class="row">
-         <div class="col-xs-3">
-             <div class="footerText leftText">
-                 DBBP#007
-             </div>
-         </div>
-         <div class="col-xs-5">
-             <div class="footerText centerText">
-                 2007 Pokemon/Nintendo
-             </div>
-         </div>
-         <div class="col-xs-4">
-             <div class="col-xs-2">
-                 <div class="footerText rightText">
-                     112/132&#9679;
-                 </div>
-             </div>
-             <div class="col-xs-2">
-                 <img class="cornerCircle" src="images/circle.png" height="20" width="20">
-             </div>
-         </div>
-     </div>-->
+    <div class="row textAboutPokemon">
+        <div class="col-xs-10">
+            <img src="images/authorBackground.png"/>
+        </div>
+        <div class="col-xs-10">
+            It shelters itself in its shell, then strikes back with spouts of
+            water at every opportunity.
+        </div>
+    </div>
+    <div class="row author">
+        <div class="col-xs-offset-11 col-xs-1">
+            <span>Illus. Kagemaru Himeno</span>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="row footerTitle">
+            <div class="col-xs-4">
+                weakness
+            </div>
+            <div class="col-xs-4">
+                resistance
+            </div>
+            <div class="col-xs-4">
+                retreat cost
+            </div>
+        </div>
+        <div class="row footerBody">
+            <div class="col-xs-4 typeDamage">
+                <img src="images/lightEnergy.png">
+                <span>+10</span>
+            </div>
+            <div class="col-xs-offset-8">
+                <img src="images/normalEnergy.png">
+            </div>
+        </div>
+        <div class="row footerLastLine">
+            <div class="col-xs-3">
+                <div class="leftText">
+                    DBBP#007
+                </div>
+            </div>
+            <div class="col-xs-5">
+                <div class="centerText">
+                    2007 Pokemon/Nintendo
+                </div>
+            </div>
+            <div class="col-xs-4">
+                <div class="col-xs-2">
+                    <div class="rightText">
+                        112/132&#9679;
+                    </div>
+                </div>
+                <div class="col-xs-2">
+                    <img src="images/circle.png">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
