--- a/carta/squirtle.html
+++ b/carta/squirtle.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squirtle</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/card.css">
 </head>
 <body>
@@ -30,33 +29,35 @@
             <span>NO. 007 Tinyturtle Pokemon HT: 1'08* WT: 12.8 lbs.</span>
         </div>
     </div>
-    <div class="row firstAtack">
-        <div class="col-xs-3">
-            <img src="images/waterEnergy.png">
+    <div class="atackArea">
+        <div class="row firstAtack">
+            <div class="col-xs-3">
+                <img src="images/waterEnergy.png">
+            </div>
+            <div class="col-xs-9">
+                <span class="title">Bubble</span>
+            </div>
+            <div class="col-xs-12 atackDescription">
+                Flip a coin. If heads, the Defending Pokemon is now Paralyzed.
+            </div>
         </div>
-        <div class="col-xs-9">
-            <span class="title">Bubble</span>
-        </div>
-        <div class="col-xs-12 atackDescription">
-            Flip a coin. If heads, the Defending Pokemon is now Paralyzed.
-        </div>
-    </div>
-    <div class="row secondAtack">
-        <div class="col-xs-3">
-            <img src="images/waterEnergy.png">
-            <img src="images/normalEnergy.png">
-        </div>
-        <div class="col-xs-7">
-            <span class="title">Aqua Tail</span>
-        </div>
-        <div class="col-xs-2">
-            <span class="hit">20</span>
-            <span class="plus">+</span>
-        </div>
-        <div class="col-xs-12">
-            Flip a coin for each <img class="iconType" src="images/waterIcon.png"/>
-            Energy attached to Squirtle.This attack
-            does 20 damage plus 10 more damage for each heads.
+        <div class="row secondAtack">
+            <div class="col-xs-3">
+                <img src="images/waterEnergy.png">
+                <img src="images/normalEnergy.png">
+            </div>
+            <div class="col-xs-7">
+                <span class="title">Aqua Tail</span>
+            </div>
+            <div class="col-xs-2">
+                <span class="hit">20</span>
+                <span class="plus">+</span>
+            </div>
+            <div class="col-xs-12">
+                Flip a coin for each <img class="iconType" src="images/waterIcon.png"/>
+                Energy attached to Squirtle.This attack
+                does 20 damage plus 10 more damage for each heads.
+            </div>
         </div>
     </div>
     <div class="row textAboutPokemon">
@@ -118,7 +119,5 @@
         </div>
     </div>
 </div>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
